...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--(Name of the Checklist)-->
        <scene sceneID="dhl-Va-VYs">
            <objects>
                <tableViewController id="1dj-WE-lbx" customClass="ChecklistViewController" customModule="Checklists" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="JfI-v3-2Xl">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="detailDisclosureButton" indentationWidth="10" reuseIdentifier="ChecklistItem" id="lmH-Qn-3in">
...
                        </sections>
                        <connections>
                            <outlet property="delegate" destination="shN-5H-YMk" id="3Mp-1m-o9D"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Add Checklist" id="Fix-XB-9UM">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="5ul-zL-jdF">
                            <connections>
                                <action selector="cancel" destination="shN-5H-YMk" id="L73-fl-y6p"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" enabled="NO" title="Done" id="JQS-lu-XI5">
                            <connections>
                                <action selector="done" destination="shN-5H-YMk" id="BI0-He-DcD"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="usR-z0-TXP" id="Lk9-4f-fq7"/>
                            <outlet property="delegate" destination="usR-z0-TXP" id="rlc-tJ-1km"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Add Item" id="UiI-4c-OdO">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="kSr-dV-hjU">
                            <connections>
                                <action selector="cancel" destination="usR-z0-TXP" id="KGy-iX-Fbi"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" enabled="NO" style="done" systemItem="done" id="d8j-nj-bfs">
...
                        <connections>
                            <outlet property="dataSource" destination="0E3-SA-mUj" id="OFI-Zi-7Lj"/>
                            <outlet property="delegate" destination="0E3-SA-mUj" id="5mh-ph-xZ8"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Checklists" id="DGY-Uk-QIi">
                        <barButtonItem key="rightBarButtonItem" title="Add" id="2He-xC-j2a">
                            <connections>
                                <segue destination="YXi-VF-W0D" kind="presentation" identifier="AddChecklist" id="LKV-vh-FGt"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
