...
    func handleFirstTime(){
        let userDefaults = UserDefaults.standard
        let firstTime = userDefaults.bool(forKey: "FirstTime")
        
        if firstTime{
            let checklist = Checklist()
            checklist.name = NSLocalizedString("List", comment: "Default list name for the first app lauch")
            checklist.iconName = "Folder"
            try! uiRealm.write {
                uiRealm.add(checklist)
                }
            
            indexOfSelectedChecklist = 0
...
